kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: klokkinn-frontend
  namespace: klokkinn

spec:
  replicas: 1
  selector:
    matchLabels:
      app: klokkinn-frontend
  template:
    metadata:
      labels:
        app: klokkinn-frontend
    spec:
      containers:
        - name: klokkinn-frontend
          image: ghcr.io/klokkinn/klokkinn-frontend:0.0.2
