kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klokkinn-frontend
  namespace: klokkinn
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: klokkinn-frontend
  type: ClusterIP
